Create Activity fixes #4 Delete Activity fixes #29 Retrieve Activity Zones fixes #8